Fix table text alignment bug

--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -11,8 +11,7 @@
 
 .page-container {
     margin: auto;
-    min-width: 1000px;
-    max-width: 1000px;
+    width: 1071px;
 }
 
 .cl{
